FTB-Community/force-app/main/default/objects/FTB_FieldMapper__mdt/FTB_FieldMapper__mdt.object-meta.xml
<CustomObject>
    <description>FTB custom metadata to map integration object to instances of SFDC objects</description>
    <label>Field Mapper</label>
    <pluralLabel>Field Mappers</pluralLabel>
</CustomObject>