FTB-Community/force-app/main/default/objects/FTB_FieldMapper__mdt/fields/FTB_FieldType__c.field-meta.xml
<CustomField>
    <fullName>FTB_FieldType__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>