FTB-Community/force-app/main/default/objects/FTB_FieldMapper__mdt/fields/FTB_IntegrationField__c.field-meta.xml
<CustomField>
    <fullName>FTB_IntegrationField__c</fullName>
    <label>Integration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>