FTB-Community/force-app/main/default/objects/FTB_FieldMapper__mdt/fields/FTB_SfdcField__c.field-meta.xml
<CustomField>
    <fullName>FTB_SfdcField__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>